- Update README - update types to better align with Crossplane conventions - improve unit tests coverage
Signed-off-by: Paolo Dettori <dettori@us.ibm.com>

--- a/package/crds/resourcecontrollerv2.ibm-cloud.crossplane.io_resourceinstances.yaml
+++ b/package/crds/resourcecontrollerv2.ibm-cloud.crossplane.io_resourceinstances.yaml
@@ -79,6 +79,7 @@ spec:
                   description: The deployment location where the instance should be hosted.
                   type: string
               required:
+              - resourceGroupName
               - resourcePlanName
               - serviceName
               - target
@@ -226,8 +227,6 @@ spec:
                 url:
                   description: When you provision a new resource, a relative URL path is created identifying the location of the instance.
                   type: string
-              required:
-              - target
               type: object
             conditions:
               description: Conditions of the resource.
