- implement ResourceKey API - refactoring and cleanup - update specs and status to better align with crossplane conventions
Signed-off-by: Paolo Dettori <dettori@us.ibm.com>

--- a/examples/resourcecontrollerv2/resource-instance-cos.yaml
+++ b/examples/resourcecontrollerv2/resource-instance-cos.yaml
@@ -2,10 +2,9 @@ apiVersion: resourcecontrollerv2.ibm-cloud.crossplane.io/v1alpha1
 kind: ResourceInstance
 metadata:
   name: cos
-  annotations:
-    crossplane.io/external-name: cos-wow
 spec:
   forProvider:
+    name: mycos
     target: global
     resourceGroupName: default
     serviceName: cloud-object-storage
