Add composition examples
Signed-off-by: Paolo Dettori <dettori@us.ibm.com>

--- a/examples/resourcecontrollerv2/resource-instance-postgres.yaml
+++ b/examples/resourcecontrollerv2/resource-instance-postgres.yaml
@@ -11,5 +11,7 @@ spec:
     resourcePlanName: standard
     tags:
       - dev
+    parameters:
+      members_disk_allocation_mb: 32768
   providerConfigRef:
     name: ibm-cloud
